2025-11-24_kubernetes/day2/lab0/counter-k8s/backend_deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  revisionHistoryLimit: 0
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      serviceAccountName: backend
      containers:
        - name: main
          image: ghcr.io/ondrejsika/counter
          ports:
            - containerPort: 8000
          startupProbe:
            httpGet:
              path: /readyz
              port: 8000
          livenessProbe:
            httpGet:
              path: /livez
              port: 8000
          resources:
            requests:
              cpu: 40m
              memory: 20Mi
            limits:
              cpu: 200m
              memory: 100Mi
