2025-11-24_kubernetes/day2/lab0/counter-k8s/frontend_go_deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-go
spec:
  revisionHistoryLimit: 0
  replicas: 4
  selector:
    matchLabels:
      app: frontend-go
  template:
    metadata:
      labels:
        app: frontend-go
    spec:
      containers:
        - name: main
          image: ghcr.io/ondrejsika/counter-frontend-go
          ports:
            - containerPort: 3000
          startupProbe:
            httpGet:
              path: /api/livez
              port: 3000
          livenessProbe:
            httpGet:
              path: /api/livez
              port: 3000
          resources:
            requests:
              cpu: 20m
              memory: 20Mi
            limits:
              cpu: 40m
              memory: 40Mi
