2025-11-24_kubernetes/day2/lab0/counter-k8s/frontend_js_deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  revisionHistoryLimit: 0
  replicas: 4
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: main
          image: ghcr.io/ondrejsika/counter-frontend
          ports:
            - containerPort: 3000
          startupProbe:
            httpGet:
              path: /api/livez
              port: 3000
          livenessProbe:
            httpGet:
              path: /api/livez
              port: 3000
          resources:
            requests:
              cpu: 100m
              memory: 200Mi
            limits:
              cpu: 200m
              memory: 200Mi
