2025-11-24_kubernetes/day2/lab0/counter-k8s/redis_sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis
spec:
  serviceName: redis
  volumeClaimTemplates:
    - metadata:
        name: redis
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 1Gi
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      volumes:
        - name: redis
          persistentVolumeClaim:
            claimName: redis
      containers:
        - name: main
          image: docker.io/library/redis:8
          ports:
            - containerPort: 6379
          resources:
            requests:
              memory: 50Mi
              cpu: 50m
            limits:
              memory: 100Mi
              cpu: 100m
          volumeMounts:
            - name: redis
              mountPath: /data
